Clean some part of the code (indentation, warning ...) and adding a TODO tag for uncommented part to full the javadoc.